@@ -46,13 +46,14 @@
 #include <QTextStream>
 #include <QGridLayout>
 #include <QPixmap>
+#include <QTextCodec>
 
 // #define CROSSREF_TEST
 
 #define CROSSREF_USE_UNIXREF
 
 namespace {
-  static const char* CROSSREF_BASE_URL = "http://www.crossref.org/openurl/?url_ver=Z39.88-2004&noredirect=true";
+  static const char* CROSSREF_BASE_URL = "http://www.crossref.org/openurl/";
 }
 
 using Tellico::Fetch::CrossRefFetcher;
@@ -81,13 +82,14 @@ bool CrossRefFetcher::canFetch(int type) const {
 void CrossRefFetcher::readConfigHook(const KConfigGroup& config_) {
   m_user = config_.readEntry("User");
   m_password = config_.readEntry("Password");
+  m_email = config_.readEntry("Email");
 }
 
 void CrossRefFetcher::search() {
   m_started = true;
 
   readWallet();
-  if(m_user.isEmpty() || m_password.isEmpty()) {
+  if(m_email.isEmpty() && (m_user.isEmpty() || m_password.isEmpty())) {
     message(i18n("%1 requires a username and password.", source()), MessageHandler::Error);
     stop();
     return;
@@ -143,7 +145,7 @@ void CrossRefFetcher::slotComplete(KJob*) {
   QFile f(QLatin1String("/tmp/test.xml"));
   if(f.open(QIODevice::WriteOnly)) {
     QTextStream t(&f);
-    t.setEncoding(QTextStream::UnicodeUTF8);
+    t.setCodec(QTextCodec::codecForName("UTF-8"));
     t << data;
   }
   f.close();
@@ -234,10 +236,16 @@ void CrossRefFetcher::initXSLTHandler() {
 
 KUrl CrossRefFetcher::searchURL(FetchKey key_, const QString& value_) const {
   KUrl u(CROSSREF_BASE_URL);
+  u.addQueryItem(QLatin1String("noredirect"), QLatin1String("true"));
+  u.addQueryItem(QLatin1String("multihit"), QLatin1String("true"));
 #ifdef CROSSREF_USE_UNIXREF
   u.addQueryItem(QLatin1String("format"), QLatin1String("unixref"));
 #endif
-  u.addQueryItem(QLatin1String("req_dat"), QString::fromLatin1("ourl_%1:%2").arg(m_user, m_password));
+  if(m_email.isEmpty()) {
+    u.addQueryItem(QLatin1String("pid"), QString::fromLatin1("%1:%2").arg(m_user, m_password));
+  } else {
+    u.addQueryItem(QLatin1String("pid"), m_email);
+  }
 
   switch(key_) {
     case DOI:
@@ -302,7 +310,6 @@ CrossRefFetcher::ConfigWidget::ConfigWidget(QWidget* parent_, const CrossRefFetc
                           optionsWidget());
   al->setOpenExternalLinks(true);
   al->setWordWrap(true);
-  ++row;
   l->addWidget(al, row, 0, 1, 2);
   // richtext gets weird with size
   al->setMinimumWidth(al->sizeHint().width());
@@ -327,10 +334,21 @@ CrossRefFetcher::ConfigWidget::ConfigWidget(QWidget* parent_, const CrossRefFetc
   m_passEdit->setWhatsThis(w);
   label->setBuddy(m_passEdit);
 
+  label = new QLabel(i18n("For some accounts, only an email address is required."), optionsWidget());
+  l->addWidget(label, ++row, 0, 1, 2);
+
+  label = new QLabel(i18n("Email: "), optionsWidget());
+  l->addWidget(label, ++row, 0);
+  m_emailEdit = new KLineEdit(optionsWidget());
+  connect(m_emailEdit, SIGNAL(textChanged(const QString&)), SLOT(slotSetModified()));
+  l->addWidget(m_emailEdit, row, 1);
+  label->setBuddy(m_emailEdit);
+
   if(fetcher_) {
     fetcher_->readWallet(); // make sure that the wallet values are read
     m_userEdit->setText(fetcher_->m_user);
     m_passEdit->setText(fetcher_->m_password);
+    m_emailEdit->setText(fetcher_->m_email);
   }
 }
 
@@ -342,6 +360,10 @@ void CrossRefFetcher::ConfigWidget::saveConfig(KConfigGroup& config_) {
   s = m_passEdit->text().trimmed();
   if(!s.isEmpty()) {
     config_.writeEntry("Password", s);
+  }
+  s = m_emailEdit->text().trimmed();
+  if(!s.isEmpty()) {
+    config_.writeEntry("Email", s);
   }
 
   slotSetModified(false);
